<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".features.random.RandomFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/randomTextView"
        style="@style/text_style"
        android:text="@string/random_text"/>

    <TextView
        android:id="@+id/randomTextView1"
        style="@style/text_style"
        android:text="@string/random_text1" />

    <TextView
        android:id="@+id/randomTextView2"
        style="@style/text_style"
        android:text="@string/random_text2"/>

    <TextView
        android:id="@+id/randomTextView3"
        style="@style/text_style"
        android:text="@string/random_text3"/>

    <TextView
        android:id="@+id/randomTextView4"
        style="@style/text_style"
        android:text="@string/random_text4"/>

</LinearLayout>