<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.login.LoginFragment">


    <TextView
        style="@style/playlist_text_style"
        android:text="@string/login_text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/user_email"
        style="@style/edit_text_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_password"
        style="@style/edit_text_style"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        style="@style/button_style"
        android:id="@+id/login_button"
        android:text="@string/login_button" />


</LinearLayout>