<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".features.playlists.PlaylistsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_test_id"
        style="@style/playlist_text_style"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/welcome_test_id_2"
        style="@style/playlist_text_style"
        android:text="@string/greeting"

        android:layout_gravity="center"/>

    <Button
        android:id="@+id/my_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_text"
        android:textColor="@color/DarkMagenta"
        android:textSize="20sp" />

    <Button
        android:id="@+id/my_second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_text"
        android:textColor="@color/DarkSeaGreen"
        android:textSize="20sp" />
</LinearLayout>